fixed spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -19,12 +19,13 @@ body {
   display: flex;
   position: absolute;
   top: 175px;
-  padding-left: 40px;
+  margin-left: 50px;
+  width: 100%;
   justify-content: space-between;
 }
 
 .about-me-text-container {
-  width: 500px;
+  width: 50%;
   border-style: solid;
   border-width: 1px;
   border-color: white;
@@ -32,6 +33,7 @@ body {
   padding: 15px;
   height: 360px;
   margin-top: 30px;
+  margin-left: 100px;
 }
 
 .about-me-text {
@@ -41,16 +43,16 @@ body {
 }
 
 .about-me-pictures-grid {
-  padding-left: 550px;
-  width: 250px;
-  display: grid;
-  justify-content: end;
+  padding-left: 0;
+  width: 50%;
   row-gap: 15px;
   margin: 0;
+  margin-left: 250px;
+  margin-top: 30px;
 }
 
 .about-me-picture {
-  height: 210px;
-  width: 210px;
+  height: 300px;
+  width: 300px;
   object-fit: cover;
 }
