--- a/styles/service.css
+++ b/styles/service.css
@@ -68,12 +68,11 @@ body {
 
 .button-display-grid {
   display: grid;
-  grid-template-columns: 500px 500px 500px;
-  column-gap: 70px;
+  grid-template-columns: 300px 300px 300px;
+  column-gap: 125px;
   row-gap: 150px;
   padding-top: 200px;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 200px;
 }
 
 .dropdown {
